--- a/styles/index.css
+++ b/styles/index.css
@@ -4,9 +4,15 @@ body {
 }
 
 #bar {
-  outline:1px dashed blue;
   position:fixed;
   right:1.25em;
+}
+
+.synced {
+  outline:2px solid rgb(20, 202, 20);
+}
+.not-synced {
+  outline:2px solid rgb(247, 12, 12);
 }
 
 main > header {
